chore: dedicate to CC0 (public domain) + update Pages workflow to non-deprecated actions

--- a/package.json
+++ b/package.json
@@ -31,5 +31,5 @@
     "dist/index.d.ts"
   ],
   "keywords": ["midi", "soundfont", "sf2", "music", "audio", "web-audio", "synthesizer"],
-  "license": "MIT"
+  "license": "CC0-1.0"
 }
