docs(readme): tighter trimmed slideshow + theme-cycling; fix demo config to use relative SoundFonts path for Pages

--- a/src/demo/demo-player.config.json
+++ b/src/demo/demo-player.config.json
@@ -1,6 +1,6 @@
 {
-  "sf2Path": "/SoundFonts",
-  "midiPath": "/DemoMidiFiles",
+  "sf2Path": "SoundFonts",
+  "midiPath": "DemoMidiFiles",
   "sf2Files": [
     "MidiocrePack.sf2"
   ],
