--- a/src/demo/demo-player.config.json
+++ b/src/demo/demo-player.config.json
@@ -1,6 +1,6 @@
 {
   "sf2Path": "/SoundFonts",
-  "midiPath": "DemoMidiFiles",
+  "midiPath": "/DemoMidiFiles",
   "sf2Files": [
     "MidiocrePack.sf2"
   ],
