--- a/.github/workflows/deploy-demo.yml
+++ b/.github/workflows/deploy-demo.yml
@@ -26,8 +26,17 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps chromium
+
       - name: Build (library + demo + CLI)
         run: npm run build --if-present
+
+      - name: Generate README screenshots
+        run: npm run readme:screenshots
+
+      - name: Generate README slideshow
+        run: npm run readme:slideshow -- --cycle-themes --repeat 2
 
       - name: Verify demo output
         run: |
