ci: automate README slideshow generation in CI
- Remove outdated GIF from assets
- Update CI workflow to generate fresh screenshots and GIF on each deployment
- Restore GIF display in README with proper documentation
- Add gifsicle for GIF animation creation in CI

--- a/.github/workflows/deploy-demo.yml
+++ b/.github/workflows/deploy-demo.yml
@@ -46,6 +46,7 @@ jobs:
       - name: Verify demo output
         run: |
           echo "Contents of dist/demo:" && ls -la dist/demo || true
+          echo "Generated assets:" && ls -la assets/ || true
 
       - name: Upload artifact for GitHub Pages
         uses: actions/upload-pages-artifact@v4
