--- a/.github/workflows/deploy-demo.yml
+++ b/.github/workflows/deploy-demo.yml
@@ -45,9 +45,18 @@ jobs:
       - name: Generate README slideshow
         run: |
           echo "Running slideshow generation..."
-          npm run readme:slideshow -- --cycle-themes --repeat 2
+          npm run readme:slideshow -- --src .playwright-mcp --cycle-themes --repeat 2
           echo "Slideshow generation complete. Checking assets:"
           ls -la assets/ || echo "No assets directory"
+
+      - name: Copy GIF to demo folder
+        run: |
+          if [ -f "assets/readme-slideshow.gif" ]; then
+            cp assets/readme-slideshow.gif dist/demo/
+            echo "GIF copied to dist/demo/"
+          else
+            echo "GIF not found in assets/"
+          fi
 
       - name: Verify demo output
         run: |
