fix: use tsx to run TypeScript scripts in CI
- Add tsx as dev dependency for running TypeScript files
- Update package.json scripts to use --import tsx instead of node directly
- Fixes ERR_UNKNOWN_FILE_EXTENSION error in CI

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "dev": "node scripts/dev-server.mjs",
     "typecheck": "tsc --noEmit",
     "cli": "node dist/cli/sf2cli.mjs",
-    "readme:slideshow": "node scripts/make-readme-slideshow.ts",
-    "readme:screenshots": "node scripts/take-screenshots.ts"
+    "readme:slideshow": "node --import tsx scripts/make-readme-slideshow.ts",
+    "readme:screenshots": "node --import tsx scripts/take-screenshots.ts"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
@@ -28,6 +28,7 @@
     "esbuild": "^0.20.0",
     "playwright": "^1.58.2",
     "sharp": "^0.34.5",
+    "tsx": "^4.21.0",
     "typescript": "^5.4.0"
   },
   "files": [
