--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "build:cli": "esbuild src/cli/sf2cli.ts --bundle --platform=node --format=esm --outfile=dist/cli/sf2cli.mjs --sourcemap --banner:js=\"#!/usr/bin/env node\"",
     "dev": "node scripts/dev-server.mjs",
     "typecheck": "tsc --noEmit",
-    "cli": "node dist/cli/sf2cli.mjs",
-    "readme:slideshow": "node --import tsx scripts/make-readme-slideshow.ts",
-    "readme:screenshots": "node --import tsx scripts/take-screenshots.ts"
+    "cli": "node dist/cli/sf2cli.mjs"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
@@ -28,7 +26,6 @@
     "esbuild": "^0.20.0",
     "playwright": "^1.58.2",
     "sharp": "^0.34.5",
-    "tsx": "^4.21.0",
     "typescript": "^5.4.0"
   },
   "files": [
