Re-enable SF2 Builder for GitHub Pages and improve SF2 file enumeration
- Re-enable enableSF2Builder=true in GitHub Pages builds
- Add dynamic SF2 file enumeration with '*' wildcard support
- Add fetchAllSF2Files() function for API-based discovery
- Update MidiocreConfig interface to include enableSF2Builder
- Fallback to only MidiocrePack.sf2 when API unavailable

--- a/src/demo/demo-player.config.json
+++ b/src/demo/demo-player.config.json
@@ -2,7 +2,8 @@
   "sf2Path": "/SoundFonts",
   "midiPath": "/DemoMidiFiles",
   "sf2Files": [
-    "MidiocrePack.sf2"
+    "MidiocrePack.sf2",
+    "*"
   ],
   "midiFiles": [
     "Bach_-_Toccata_and_Fugue_Dm.mid",
