--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,4 @@ desktop.ini
 # ------------------------------------------------------------------
 /SoundFonts/*.sf2
 !/SoundFonts/MidiocrePack.sf2
+histogram_screenshot.png
