--- a/src/demo/demo-player.config.json
+++ b/src/demo/demo-player.config.json
@@ -18,5 +18,6 @@
   "loop": false,
   "volume": 0.8,
   "tempo": 1.0,
-  "enableSF2Builder": true
+  "enableSF2Builder": true,
+  "showFontSelector": true
 }
