--- a/.github/workflows/deploy-demo.yml
+++ b/.github/workflows/deploy-demo.yml
@@ -31,6 +31,9 @@ jobs:
 
       - name: Install gifsicle (for GIF creation)
         run: sudo apt-get update && sudo apt-get install -y gifsicle
+      
+      - name: Install ImageMagick (fallback for GIF creation)
+        run: sudo apt-get update && sudo apt-get install -y imagemagick
 
       - name: Build (library + demo + CLI)
         run: npm run build --if-present
