--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "playwright": "^1.58.2",
     "sharp": "^0.34.5",
     "ts-node": "^10.9.1",
+    "gifencoder": "^2.0.1",
     "typescript": "^5.4.0"
   },
   "files": [
